--- a/public/main.css
+++ b/public/main.css
@@ -8,6 +8,13 @@ header {
   background-color: #FF6959;
   border-radius: 0 0 10px 10px; }
 
+footer {
+  height: 40px;
+  margin: 0 10px 0 10px;
+  padding: 10px;
+  background-color: #FF6959;
+  border-radius: 10px 10px 0 0; }
+
 #header-img {
   position: relative;
   right: 20%;
