--- a/public/main.scss
+++ b/public/main.scss
@@ -44,7 +44,7 @@ footer {
 }
 
 #m-box-1 {
-  border: 5px black solid;
+  // border: 5px black solid;
   border-radius: 10px;
   margin: 10px;
   grid-column: 1;
@@ -62,7 +62,7 @@ footer {
 }
 
 #m-box-3 {
-  border: 5px black solid;
+  // border: 5px black solid;
   border-radius: 10px;
   margin: 10px;
   grid-column: 3;
