--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <section class="container">
   <div id="m-box-1">
-    <img src="images/wendy.png">
+    <img class="img" src="images/wendy.png">
     <hr>
       <section class="info-container">
         <p>WENDY</p>
@@ -40,7 +40,7 @@
     </div>
   </div>
   <div id="m-box-3">
-    <img src="images/ronald.png">
+    <img class="img" src="images/ronald.png">
     <hr>
       <section class="info-container">
         <p>RONALD McDONALD</p>
