--- a/public/main.css
+++ b/public/main.css
@@ -22,7 +22,7 @@ footer {
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr; }
+  grid-template-columns: 32% 33% 32%; }
 
 #h-box-1 {
   grid-column: 1; }
@@ -35,22 +35,25 @@ footer {
 
 #m-box-1 {
   border-radius: 10px;
-  margin: 10px;
+  margin: 10px 10px 0 10px;
   grid-column: 1;
   background-color: white;
   text-align: center;
-  padding-top: 25%; }
+  padding-top: 20%; }
+
+.img {
+  width: 90%; }
 
 #m-box-2 {
   border-radius: 10px;
-  margin: 10px 0 10px 0;
+  margin: 20px 0 10px 0;
   grid-column: 2;
   background-color: #FFD4D0;
-  padding: 0 auto; }
+  height: 95%; }
 
 #m-box-3 {
   border-radius: 10px;
-  margin: 10px;
+  margin: 10px 10px 0 10px;
   grid-column: 3;
   background-color: white;
   text-align: center;
@@ -71,7 +74,7 @@ hr {
   color: black;
   height: 3px;
   background-color: black;
-  margin: -6px 40px 0 40px; }
+  margin: -5px 40px 0 40px; }
 
 #center-text {
   margin: 20px;
@@ -84,12 +87,11 @@ hr {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: white;
   text-align: justify;
-  font-size: 30px;
+  font-size: 14px;
   margin: 30px; }
 
 .text-info {
   border-radius: 10px;
-  height: 100px;
   margin: 20px;
   background-color: #FFD4D0; }
 
@@ -99,7 +101,6 @@ hr {
   text-transform: uppercase;
   font-weight: bold;
   color: white;
-  height: 220px;
   margin: 20px;
   background-color: #903D34;
   padding: 10px;
@@ -113,7 +114,7 @@ hr {
   font-size: 20px; }
 
 #wendy-info > p {
-  padding-top: 27px; }
+  padding-top: 52px; }
 
 #form {
   color: black;
@@ -129,7 +130,7 @@ label {
   font-size: 25px; }
 
 textarea {
-  height: 200px;
+  height: 80px;
   width: 99%; }
 
 input {
