--- a/public/main.scss
+++ b/public/main.scss
@@ -28,7 +28,7 @@ footer {
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 32% 33% 32%;
 }
 
 #h-box-1 {
@@ -46,25 +46,29 @@ footer {
 #m-box-1 {
   // border: 5px black solid;
   border-radius: 10px;
-  margin: 10px;
+  margin: 10px 10px 0 10px;
   grid-column: 1;
   background-color: white;
   text-align: center;
-  padding-top: 25%;
+  padding-top: 20%;
+}
+
+.img {
+  width: 90%;
 }
 
 #m-box-2 {
   border-radius: 10px;
-  margin: 10px 0 10px 0;
+  margin: 20px 0 10px 0;
   grid-column: 2;
   background-color: #FFD4D0;
-  padding: 0 auto;
+  height: 95%;
 }
 
 #m-box-3 {
   // border: 5px black solid;
   border-radius: 10px;
-  margin: 10px;
+  margin: 10px 10px 0 10px;
   grid-column: 3;
   background-color: white;
   text-align: center;
@@ -88,8 +92,9 @@ hr {
   color: black;
   height: 3px;
   background-color: black;
-  margin: -6px 40px 0 40px;
+  margin: -5px 40px 0 40px;
 }
+
 #center-text {
   margin: 20px;
   background-color: #903D34;
@@ -102,13 +107,12 @@ hr {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: white;
   text-align: justify;
-  font-size: 30px;
+  font-size: 14px;
   margin: 30px;
 }
 
 .text-info {
   border-radius: 10px;
-  height: 100px;
   margin: 20px;
   background-color: #FFD4D0
 }
@@ -119,7 +123,6 @@ hr {
   text-transform: uppercase;
   font-weight: bold;
   color: white;
-  height: 220px;
   margin: 20px;
   background-color: #903D34;
   padding: 10px;
@@ -135,7 +138,7 @@ hr {
 }
 
 #wendy-info>p {
-  padding-top: 27px;
+  padding-top: 52px;
 }
 
 #form {
@@ -154,7 +157,7 @@ label {
 }
 
 textarea {
-  height: 200px;
+  height: 80px;
   width: 99%;
 }
 
