--- a/public/main.scss
+++ b/public/main.scss
@@ -54,7 +54,7 @@ footer {
 }
 
 .img {
-  width: 90%;
+  width: 75%;
 }
 
 #m-box-2 {
@@ -78,7 +78,7 @@ footer {
 h1 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 23px;
   color: yellow;
 }
 
@@ -97,6 +97,7 @@ hr {
 
 #center-text {
   margin: 20px;
+  margin-top: 13%;
   background-color: #903D34;
   padding: 10px;
   border-radius: 10px;
@@ -118,6 +119,7 @@ hr {
 }
 
 .info-container {
+  height: 38.5%;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 30px;
   text-transform: uppercase;
@@ -138,7 +140,7 @@ hr {
 }
 
 #wendy-info>p {
-  padding-top: 52px;
+  padding-top: 7%;
 }
 
 #form {
