--- a/public/main.css
+++ b/public/main.css
@@ -42,7 +42,7 @@ footer {
   padding-top: 20%; }
 
 .img {
-  width: 90%; }
+  width: 75%; }
 
 #m-box-2 {
   border-radius: 10px;
@@ -62,7 +62,7 @@ footer {
 h1 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 23px;
   color: yellow; }
 
 h2 {
@@ -78,6 +78,7 @@ hr {
 
 #center-text {
   margin: 20px;
+  margin-top: 13%;
   background-color: #903D34;
   padding: 10px;
   border-radius: 10px;
@@ -96,6 +97,7 @@ hr {
   background-color: #FFD4D0; }
 
 .info-container {
+  height: 38.5%;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 30px;
   text-transform: uppercase;
@@ -114,7 +116,7 @@ hr {
   font-size: 20px; }
 
 #wendy-info > p {
-  padding-top: 52px; }
+  padding-top: 7%; }
 
 #form {
   color: black;
