--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>NEW YORK POST</title>
   <link rel="stylesheet" href="main.css"></link>
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
 </head>
 <body>
   <header>
