--- a/public/main.scss
+++ b/public/main.scss
@@ -1,4 +1,5 @@
 $maincolor: #FF6959;
+$font: 'Abril Fatface', cursive;
 
 body {
   margin: 0;
@@ -76,7 +77,7 @@ footer {
 }
 
 h1 {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: $font;
   font-weight: bold;
   font-size: 23px;
   color: yellow;
@@ -97,7 +98,7 @@ hr {
 
 #center-text {
   margin: 20px;
-  margin-top: 13%;
+  margin-top: 11%;
   background-color: #903D34;
   padding: 10px;
   border-radius: 10px;
@@ -106,6 +107,7 @@ hr {
 
 #center-text>p {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
   color: white;
   text-align: justify;
   font-size: 14px;
@@ -120,7 +122,7 @@ hr {
 
 .info-container {
   height: 38.5%;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: $font;
   font-size: 30px;
   text-transform: uppercase;
   font-weight: bold;
@@ -154,7 +156,7 @@ hr {
 label {
   text-transform: uppercase;
   font-weight: bold;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: $font;
   font-size: 25px;
 }
 
