--- a/views/index.erb
+++ b/views/index.erb
@@ -44,7 +44,7 @@
     <hr>
       <section class="info-container">
         <p>RONALD McDONALD</p>
-        <article class="text-info">
+        <article id="ronald-info" class="text-info">
           <p>Two all-beef patties, special sauce, lettuce, cheese, pickles, onions on a sesame seed bun.</p>
         </article>
       </section>
