--- a/public/main.css
+++ b/public/main.css
@@ -39,7 +39,7 @@ footer {
   grid-column: 1;
   background-color: white;
   text-align: center;
-  padding-top: 20%; }
+  padding-top: 16%; }
 
 .img {
   width: 75%; }
@@ -98,7 +98,7 @@ hr {
   background-color: #FFD4D0; }
 
 .info-container {
-  height: 38.5%;
+  height: 40.5%;
   font-family: "Abril Fatface", cursive;
   font-size: 30px;
   text-transform: uppercase;
@@ -109,6 +109,9 @@ hr {
   padding: 10px;
   border-radius: 10px;
   text-align: center; }
+
+#ronald-info {
+  height: 80%; }
 
 .text-info > p {
   color: black;
