--- a/public/main.scss
+++ b/public/main.scss
@@ -51,7 +51,7 @@ footer {
   grid-column: 1;
   background-color: white;
   text-align: center;
-  padding-top: 20%;
+  padding-top: 16%;
 }
 
 .img {
@@ -121,7 +121,7 @@ hr {
 }
 
 .info-container {
-  height: 38.5%;
+  height: 40.5%;
   font-family: $font;
   font-size: 30px;
   text-transform: uppercase;
@@ -132,6 +132,10 @@ hr {
   padding: 10px;
   border-radius: 10px;
   text-align: center;
+}
+
+#ronald-info {
+  height: 80%;
 }
 
 .text-info>p {
