--- a/views/index.erb
+++ b/views/index.erb
@@ -42,7 +42,7 @@
   <div id="m-box-3">
     <img class="img" src="images/ronald.png">
     <hr>
-      <section ruclass="info-container">
+      <section class="info-container">
         <p>RONALD McDONALD</p>
         <article id="ronald-info" class="text-info">
           <p>Two all-beef patties, special sauce, lettuce, cheese, pickles, onions on a sesame seed bun.</p>
