--- a/public/main.scss
+++ b/public/main.scss
@@ -101,6 +101,7 @@ hr {
   margin-top: 11%;
   background-color: #903D34;
   padding: 10px;
+  padding-top: 14%;
   border-radius: 10px;
   text-align: center;
 }
@@ -121,7 +122,7 @@ hr {
 }
 
 .info-container {
-  height: 40.5%;
+  height: 32.5%;
   font-family: $font;
   font-size: 30px;
   text-transform: uppercase;
