--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,6 @@
 <section class="container">
   <div id="m-box-1">
+  // IMG CREDIT: https://lysol-jones.deviantart.com/art/Extra-Value-Combo-Alpha-66945355
     <img class="img" src="images/wendy.png">
     <hr>
       <section class="info-container">
@@ -40,6 +41,7 @@
     </div>
   </div>
   <div id="m-box-3">
+  // IMG CREDIT: https://lysol-jones.deviantart.com/art/Extra-Value-Combo-Alpha-66945355
     <img class="img" src="images/ronald.png">
     <hr>
       <section class="info-container">
